fix hover and spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,25 +1,23 @@
 
 ul{
- background-color: #151515; 
- list-style: none;
- margin-top: 0px;
- padding: 7px;
- color: white;
- text-align: left;
- 
-
+  background-color: #151515;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: white;
+  text-align: left;
+  display: flex;
 }
 li a {
   display: block;
   color: #000;
-  padding: 8px 16px;
+  padding: 16px 16px;
   text-decoration: none;
+  color: white;
 }
 
 li a:hover {
   background-color: #555;
-  color: white;
- 
 }
 
   body {
